--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,57 @@ nav div div ul li a{
 }
 .cart{
     width: 19rem;
-    height: 100%;
+    /* height: 100%; */
     position: fixed;
-    margin: 57px 0rem;
+    margin: 57px -20rem;
     z-index: 4;
-    display: none;
+    /* display: none; */
+    transition: .5s;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    -ms-transition: .5s;
+    -o-transition: .5s;
+    
+}
+hr{
+    height: 5px;
+}
+.cart div{
+    background-color: rgb(225, 225, 225);
+    
+}
+.cart .cartItem{
+    background-color: rgb(225, 225, 225);
+    /* height: 100%; */
 }
 .cart.act{
-    display: block;
+    /* display: block; */
+    margin: 57px 0rem;
+
+}
+.r{
+    color: red;
+}
+.item{
+    display: flex;
+    align-items: center;
+
+}
+.item button{
+    outline: none;
+    border: 1px solid #000;
+}
+.item img{
+    width: 50px;
+}
+.fa-cart-shopping{
+    position: relative;
+}
+.count{
+    background-color: white;
+    position: absolute;
+    margin: 0rem 188px;
+    padding: 1px 8px;
+    border-radius: 15px;
+    width: 24px;
 }
