--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,39 @@
     box-sizing: border-box;
 }
 @media(max-width:767px){
-    
+    .blog {
+        margin: 0px 60px;
+    }
+    .blog .card {
+        
+    }
+    .count{
+        margin: 8rem 34px;
+    }
 }
 @media(min-width:768px){
+    .blog{
+        display: grid;
+        grid-template-columns: 30% 30% 30%;
+    }
+    .blog .card {
+        width: 14rem;
+    }
+    .count{
+        margin: 8rem 34px;
+    }
+}
+@media(min-width:991px){
+    .blog{
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+    }
+    .count{
+        margin: 0rem 188px;
+
+    }
+}
+@media(min-width:1199px){
 }
 nav{
     width: 100%;
@@ -66,8 +96,18 @@ hr{
 .count{
     background-color: white;
     position: absolute;
-    margin: 0rem 188px;
     padding: 1px 8px;
     border-radius: 15px;
     width: 24px;
+}
+button{
+    border: none;
+    outline: none;
+
+}
+.card img{
+    height: 250px;
+}
+.blog{
+    padding: 6rem 0rem;
 }
