--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,14 @@
         margin: 0rem 188px;
 
     }
+    .blog .card {
+        width: 14rem;
+    }
 }
 @media(min-width:1199px){
+    .blog .card {
+        width: 290px;
+    }
 }
 nav{
     width: 100%;
@@ -86,6 +92,7 @@ hr{
 .item button{
     outline: none;
     border: 1px solid #000;
+    
 }
 .item img{
     width: 50px;
@@ -100,10 +107,23 @@ hr{
     border-radius: 15px;
     width: 24px;
 }
-button{
+.btn{
     border: none;
     outline: none;
-
+    background-color: #198754;
+    padding: 8px 12px;
+    margin: 0px 27px;
+    color: white;
+    font-weight: bolder;
+}
+.btn{
+    border: none;
+    outline: none;
+    background-color: #198754;
+    padding: 8px 12px;
+    margin: 0px 27px;
+    color: white;
+    font-weight: bolder;
 }
 .card img{
     height: 250px;
