--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #e2e8f0;
+}
 @media(max-width:767px){
     .blog {
         margin: 0px 60px;
@@ -17,10 +20,13 @@
 @media(min-width:768px){
     .blog{
         display: grid;
-        grid-template-columns: 30% 30% 30%;
+        grid-template-columns: 31% 31% 30%;
+        width: 100%;
+
     }
     .blog .card {
         width: 14rem;
+        margin-left: 3rem;
     }
     .count{
         margin: 8rem 34px;
@@ -29,7 +35,7 @@
 @media(min-width:991px){
     .blog{
         display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-columns: 23% 23% 23% 22%;
     }
     .count{
         margin: 0rem 188px;
@@ -37,11 +43,15 @@
     }
     .blog .card {
         width: 14rem;
+        margin-left: 55px;
     }
 }
 @media(min-width:1199px){
-    .blog .card {
+    /* .blog .card {
         width: 290px;
+    } */
+    .blog{
+        grid-template-columns: 19% 19% 19% 19% 19%;
     }
 }
 nav{
@@ -111,12 +121,12 @@ hr{
     border: none;
     outline: none;
     background-color: #198754;
-    padding: 8px 12px;
+    padding: 0px 11px;
     margin: 0px 27px;
     color: white;
     font-weight: bolder;
 }
-.btn{
+/* .btn{
     border: none;
     outline: none;
     background-color: #198754;
@@ -124,10 +134,98 @@ hr{
     margin: 0px 27px;
     color: white;
     font-weight: bolder;
-}
+} */
 .card img{
     height: 250px;
 }
 .blog{
-    padding: 6rem 0rem;
+    padding: 2rem 0rem;
 }
+
+
+
+
+
+
+
+
+
+
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  .mySlides img{
+    height: 380px;
+  }
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  
